<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_robot_description</name>
  <version>0.0.0</version>
<description>Warehouse robot URDF description package</description>
  <maintainer email="ganesh@todo.todo">ganesh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}"/>
    <gazebo_ros gazebo_media_path="${prefix}/meshes"/>
  </export>
</package>
